resource_customizations/policies.kyverno.io/ValidatingPolicy/testdata/healthy.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: sample-validating-policy
spec: {}
status:
  conditionStatus:
    ready: true
    conditions:
    - lastTransitionTime: "2025-01-01T00:00:00Z"
      message: webhook configured
      status: "True"
      type: WebhookConfigured
