resource_customizations/policies.kyverno.io/ValidatingPolicy/testdata/progressing.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: sample-validating-policy
spec: {}
