resource_customizations/policies.kyverno.io/ValidatingPolicy/testdata/terminating.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: terminating-resource
  deletionTimestamp: "2024-01-01T00:00:00Z"
  finalizers:
    - example.com/finalizer
